# sel4commonroot

./: CMakeLists.txt  Findsel4commonroot.cmake  README.md
rootserver/: CMakeLists.txt
rootserver/src/: main.c
